ontol-compiler/test-cases/error/rel/duplicate_anonymous_relation.on
def foo ()
def bar ()
rel // ERROR unit type `bar` cannot be part of a union
    foo is?: bar
rel // ERROR duplicate anonymous relationship
    foo is?: bar
